--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.17.1",
     "firebase-admin": "^11.5.0",
     "react": "^18.2.0",
+    "react-creditcard-validator": "^1.0.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-scripts": "5.0.1",
